RESOLVED FIXED132315
REGRESSION(r153142) ASSERT from CodeBlock::dumpBytecode dumping nString Switch Jump Tables
https://bugs.webkit.org/show_bug.cgi?id=132315
Summary REGRESSION(r153142) ASSERT from CodeBlock::dumpBytecode dumping nString Switc...
Michael Saboff
Reported 2014-04-28 17:43:06 PDT
We try to create a String from a RefPtr<StringImp> which will cause a ref. r153142 added an ASSERT that we aren't on the compilation thread. dumpBytecode() is probably only called from the compilation thread.
Attachments
Patch (1.70 KB, patch)
2014-04-28 17:50 PDT, Michael Saboff
mhahnenberg: review+
Michael Saboff
Comment 1 2014-04-28 17:50:49 PDT
Mark Hahnenberg
Comment 2 2014-04-28 18:10:36 PDT
Comment on attachment 230343 [details] Patch r=me
Michael Saboff
Comment 3 2014-04-28 18:36:47 PDT
Note You need to log in before you can comment on or make changes to this bug.