REGRESSION(r153142) ASSERT from CodeBlock::dumpBytecode dumping String Switch Jump Tables https://bugs.webkit.org/show_bug.cgi?id=132315

Reviewed by Mark Hahnenberg.

Used the StringImpl version of utf8() instead of creating a String first.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::dumpBytecode):


Canonical link: https://commits.webkit.org/150326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167917 268f45cc-cd09-0410-ab3c-d52691b4dbfc